--- a/budget/static/budget/custom.css
+++ b/budget/static/budget/custom.css
@@ -41,41 +41,6 @@
     border: none;
 }
 
-.expense-one {
-    background: #f59d2a;
-    clip-path: circle(50%);
-    height: 3em;
-    width: 3em;
-}
-
-.expense-two {
-    background: #2f8886;
-    clip-path: circle(50%);
-    height: 3em;
-    width: 3em;
-}
-
-.expense-three {
-    background: #a05195;
-    clip-path: circle(50%);
-    height: 3em;
-    width: 3em;
-}
-
-.expense-four {
-    background: #84c69b;
-    clip-path: circle(50%);
-    height: 3em;
-    width: 3em;
-}
-
-.expense-five {
-    background: #ee7738;
-    clip-path: circle(50%);
-    height: 3em;
-    width: 3em;
-}
-
 H1, H2, H3, H4, H5, H6 {
     font-family: 'Roboto', sans-serif;
     color: white;
@@ -155,125 +120,7 @@ ul {
     border-color: #EE7738 !important;
 }
 
-
-.form-control {
-    background-color: #386780;
-    background-blend-mode: soft-light;
-    border-radius: 0;
-    color: white;
-    font-family: 'Sintony', sans-serif;
-    border: none;
-}
-
-.acc-head {
-    font-family: 'Nunito', sans-serif;
-    font-size: 13pt;
-}
-
-.acc-body {
-    font-family: Nunito, sans-serif;
-    font-size: 11pt;
-    font-weight: lighter;
-}
-
-.acc-end {
-    border-bottom-color: #84c69b;
-    border-bottom-style: solid;
-    border-bottom-width: 2px;
-}
-
-.accordion-item {
-    background-color: #19313C;
-    color: white;
-}
-
-.accordion-button {
-    background-color: #386780;
-}
-
-.btn-primary {
-    background-color: #EE7738 !important;
-    border-color: #EE7738 !important;
-}
-
-
-.form-control {
-    background-color: #386780;
-    background-blend-mode: soft-light;
-    border-radius: 0;
-    color: white;
-    font-family: 'Sintony', sans-serif;
-    border: none;
-}
-
-.acc-head {
-    font-family: 'Nunito', sans-serif;
-    font-size: 13pt;
-}
-
-.acc-body {
-    font-family: Nunito, sans-serif;
-    font-size: 11pt;
-    font-weight: lighter;
-}
-
-.acc-end {
-    border-bottom-color: #84c69b;
-    border-bottom-style: solid;
-    border-bottom-width: 2px;
-}
-
-.accordion-item {
-    background-color: #19313C;
-    color: white;
-}
-
-.accordion-button {
-    background-color: #386780;
-}
-
-.btn-primary {
-    background-color: #EE7738 !important;
-    border-color: #EE7738 !important;
-}
-
-
-.form-control {
-    background-color: #386780;
-    background-blend-mode: soft-light;
-    border-radius: 0;
-    color: white;
-    font-family: 'Sintony', sans-serif;
-    border: none;
-}
-
-.acc-head {
-    font-family: 'Nunito', sans-serif;
-    font-size: 13pt;
-}
-
-.acc-body {
-    font-family: Nunito, sans-serif;
-    font-size: 11pt;
-    font-weight: lighter;
-}
-
-.acc-end {
-    border-bottom-color: #84c69b;
-    border-bottom-style: solid;
-    border-bottom-width: 2px;
-}
-
-.accordion-item {
-    background-color: #19313C;
-    color: white;
-}
-
-.accordion-button {
-    background-color: #386780;
-}
-
-.btn-primary {
-    background-color: #EE7738 !important;
-    border-color: #EE7738 !important;
+.btn-primary:hover {
+    background-color: #d66b32 !important;
+    border-color: #d66b32 !important;
 }
