--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,45 +5,25 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="text-light">
-                    <h1>Welcome, {{ user.first_name }}!</h1>
+                    <h1>User Profile</h1>
+                    <h2 class="fs-4">Welcome, {{ user.first_name }}!</h2>
                 </div>
             </div>
-            <div class="row mt-2">
-                <div class="col-md-12">
-                    <div class="card text-white bg-dark h-100 bg-opacity-25">
+            <div class="card mb-3 bg-dark bg-opacity-25">
+                <div class="row g-0">
+                    <div class="col-md-2 align-self-center">
+                        <img src="https://i.postimg.cc/pLMGvKB6/user.png" class="img-fluid m-auto d-block profile-pic" alt="...">
+                    </div>
+                    <div class="col-md-10">
                         <div class="card-body">
-                            <img class="profile-pic" src="https://i.postimg.cc/pLMGvKB6/user.png">
                             <p>username: {{ user.username }}</p>
-                            <p>first name: {{ user.first_name }}</p>
-                            <p>last name: {{ user.last_name }}</p>
-                            <p>email: {{ user.email }}</p>
+                                <p>first name: {{ user.first_name }}</p>
+                                <p>last name: {{ user.last_name }}</p>
+                                <p>email: {{ user.email }}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    {% comment %}<div class="container-fluid hero-2">
-        <div class="container">
-            <div class="row height-45 align-items-center">
-                <div class="ml-5 pl-4">
-                    <h3>Welcome, {{ user.first_name }}</h3>
-                    <h1>User Profile Page</h1>
-                    <br>
-                    <p>username: {{ user.username }}</p>
-                    <p>first name: {{ user.first_name }}</p>
-                    <p>last name: {{ user.last_name }}</p>
-                    <p>email: {{ user.email }}</p>
-                </div>
-            </div>
-        </div>
-    </div>{% endcomment %}
-    <!--logout option for profile page. Jami.  needs styling -->
-    {% comment %}<div>
-        {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">Logout</a>
-        {% else %}
-            <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-    </div>{% endcomment %}
 {% endblock %}
