--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -12,6 +12,9 @@
     {{ transaction_label|json_script:"transaction_label" }}
     {{ transaction_amount|json_script:"transaction_amount" }}
     {{ transaction_date|json_script:"transaction_date" }}
+    {{ cat_sum|json_script:"cat_sum"}}
+    {{ sums|json_script:"sums"}}
+    {{ sumLabels|json_script:"sumLabels"}}
 
     <div class="col py-3">
         <div class="container-fluid">
@@ -145,11 +148,15 @@
                             <h2 class="fs-5 text-center">Amount Planned and Received</h2>
                             <canvas id="myChart3"></canvas>
                             <script type="text/javascript">
-                                var labelNames = JSON.parse(document.getElementById('label_names').textContent)
-                                var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
-                                var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
-                                var amountremaining = labelAmountPlanned - labelAmountRec
-                                $(document).ready(function () {
+                            var labelNames = JSON.parse(document.getElementById('label_names').textContent)
+                            var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
+                            var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
+                            var amountremaining = labelAmountPlanned.map(function(element, index){
+                                return element - labelAmountRec[index]
+                            }) 
+                            console.log(amountremaining)
+                            $(document).ready(function(){
+                                Chart.defaults.global.defaultFontColor = '#FFF';
                                     var ctx = document.getElementById('myChart3').getContext('2d');
                                     var myLabel = new Chart(ctx, {
                                         type: 'line',
@@ -168,6 +175,13 @@
                                                     data: labelAmountRec,
                                                     fill: false,
                                                     backgroundColor: '#9b59b6',
+                                                    tension: 0.1
+                                                },
+                                                {
+                                                    label: 'amount remaining',
+                                                    data: amountremaining,
+                                                    fill: false,
+                                                    backgroundColor: '#e67e22',
                                                     tension: 0.1
                                                 },
                                             ]
@@ -252,56 +266,64 @@
                 <div class="col-md-12">
                     <div class="card text-white bg-dark h-100 bg-opacity-25">
                         <div class="card-body">
-                            <h2 class="fs-5 text-center">Category Amount Planned and Remaining</h2>
+                            <p>amount planned and remaining for each category</p>
                             <canvas id="myChart5"></canvas>
                             <script type="text/javascript">
-                                var labelNames = JSON.parse(document.getElementById('label_names').textContent)
-                                var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
-                                var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
-                                var labelCategory = JSON.parse(document.getElementById('label_category').textContent)
-                                $(document).ready(function () {
-                                    var ctx = document.getElementById('myChart5').getContext('2d');
-                                    var myLabel = new Chart(ctx, {
-                                        type: 'bar',
-                                        data: {
-                                            labels: categoryNames,
-                                            datasets: [{
-                                                label: 'amount remaining',
-                                                data: amountremaining,
-                                                backgroundColor: [
-                                                    '#1abc9c',
-                                                    '#16a085',
-                                                    '#2ecc71',
-                                                    '#27ae60',
-                                                    '#3498db',
-                                                    '#2980b9',
-                                                    '#9b59b6',
-                                                    '#8e44ad',
-                                                    '#f1c40f',
-                                                    '#f39c12',
-                                                    '#e67e22',
-                                                    '#d35400',
-                                                    '#e74c3c',
-                                                    '#c0392b',
-                                                    '#ecf0f1',
-                                                    '#bdc3c7',
-                                                    '#95a5a6',
-                                                    '#7f8c8d',
-                                                ],
-                                            }]
+                            var labelNames = JSON.parse(document.getElementById('label_names').textContent)
+                            var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
+                            var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
+                            var labelCategory = JSON.parse(document.getElementById('label_category').textContent)
+    
+                            var labelCatSum = JSON.parse(document.getElementById('cat_sum').textContent)
+                            console.log(labelCatSum)
+                            var labelSums = JSON.parse(document.getElementById('sums').textContent)
+                            console.log(labelSums)
+                            var labelSumLabels = JSON.parse(document.getElementById('sumLabels').textContent)
+                            console.log(labelSumLabels)
+    
+                            $(document).ready(function(){
+                                var ctx = document.getElementById('myChart5').getContext('2d');
+                                var myLabel = new Chart(ctx, {
+                                    type: 'bar',
+                                    data: {
+                                        labels: categoryNames,
+                                        datasets: [
+                                        {
+                                            label: 'amount planned',
+                                            data: labelSums,
+                                            fill: false,
+                                            borderColor: '#1abc9c',
+                                            tension: 0.1
+                                        }, 
+                                        {
+                                            label: 'amount received',
+                                            data: labelSums,
+                                            fill: false,
+                                            borderColor: '#e67e22',
+                                            tension: 0.1
                                         },
-                                        options: {
-                                            scales: {
-                                                y: {
-                                                    beginAtZero: true
-                                                }
+                                        {
+                                            label: 'amount remaining',
+                                            data: amountremaining,
+                                            fill: false,
+                                            borderColor: 'rgba(75, 192, 192, 1)',
+                                            tension: 0.1
+                                        },
+                                       ]
+                                        
+                                    },
+                                    options: {
+                                        scales: {
+                                            y: {
+                                                beginAtZero: true
                                             }
-
-
                                         }
-                                    });
-                                });
-                            </script>
+                                    
+                                        
+                                    }
+                        });
+                            });
+                        </script>
                         </div>
                     </div>
                 </div>
