--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -91,7 +91,8 @@
                             <script type="text/javascript">
                                 var categoryTypes = JSON.parse(document.getElementById('category_types').textContent)
                                 var numIncome = JSON.parse(document.getElementById('numIncome').textContent)
-                                console.log(numIncome)
+                                console.log('categoryTypes', categoryTypes)
+                                console.log('numIncome', numIncome)
                                 $(document).ready(function () {
                                     var ctx = document.getElementById('myChart2').getContext('2d');
                                     var myCategory = new Chart(ctx, {
@@ -103,7 +104,7 @@
                                                 data: numIncome,
                                                 backgroundColor: [
                                                     '#1abc9c',
-                                                    '#16a085',
+                                                    '#f39c12',
                                                 ],
                                                 borderColor: [
                                                     '#fff',
@@ -113,7 +114,7 @@
                                         },
                                         options: {
                                             legend: {
-                                                display: false,
+                                                //display: false,
                                             },
                                             scales: {
                                                 y: {
